--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -7,3 +7,27 @@
 h2{
    font-family:  "Montserrat", sans-serif ;
 }
+.log{
+    height: 746px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    height: 300px;
+    width: 500px;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+
+}
