Реализация функции работы с пользователями (авторизация, регистрация/добавление пользователя администратором).

--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -18,10 +18,11 @@ h2{
 form {
     height: 300px;
     width: 500px;
-    background-color: gray;
+    background-color: #8E8E8D;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 .login{
