--- a/public/Css/sort.css
+++ b/public/Css/sort.css
@@ -28,9 +28,14 @@
 
 .filter-form {
     width: 40%; /* Ширина блока с формой фильтра */
+    background-color: #ffffff; /* Белый цвет фона блока с формой */
+    padding: 20px;
+    border-radius: 10px; /* Закругленные углы */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Тень блока */
 }
 
-.filter-form input, .filter-form select {
+.filter-form input,
+.filter-form select {
     width: calc(100% - 20px); /* Учитываем отступы */
     padding: 10px;
     margin-bottom: 10px;
@@ -39,12 +44,13 @@
 .filter-form button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #000000;
     color: #fff;
     border: none;
     cursor: pointer;
+    border-radius: 5px; /* Закругленные углы */
 }
 
 .filter-form button:hover {
-    background-color: #0056b3;
+    background-color: #333333;
 }
